25.09.23 добавлены класс-сущность User и интерфейс хранения UserRepository